data/all_generated_tests/raw_wast_tests/br_StackCorruption_220.wast
;; 1. **Test Br with Invalid Label Index:**    - **Description:** Implement a `br` instruction with a label index that exceeds the available labels in a deeply nested control structure.    - **Reasoning:** This test checks if invalid label indices cause stack corruption by referencing undefined control structures.    - **Constraint:** Ensure the label `l` is in the bounds of available nested labels.    - **Relation to Stack Corruption:** An invalid label index may bypass proper stack unwinding, potentially leaving stack elements unresolved or inconsistent before and after the branch.

(assert_invalid
  (module
    (func
      (block (block (br 2)))
    )
  )
  "unknown label"
)